-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    3.1b2

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2006 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 3.1b2
-------------------

6/15/07
    - Added t_auction_pdipm.m and renamed t_auction.m to
      t_auction_minopf.m.

6/8/07
    - Updated have_fcn.m to check for appropriate minimum versions of
      Matlab, for TSPOPF.

6/7/07
    - Modified printpf.m to correctly detect binding line limits when
      a limit of 0 is taken to mean unconstrained.
    - Fixed bugs in handling of multipliers for general PQ capability
      curves in fmincopf.m (also in mopf.m and tspopf.m).
    - Refactored t_opf.m into separate files for each solver.
    - Modified opf.m, mpoption.m, mpver.m, have_fcn.m to include
      support for TSPOPF, a new optional package of OPF solvers.

9/29/06
    - Added check to runpf.m for case where all gens hit Q limits when
      ENFORCE_Q_LIMS is enabled.


Changes since 3.1b1
-------------------

9/15/06
    - Released version 3.1b2.

9/12/06
    - Added makePDFT.m which builds the DC PTDF matrix for a specified
      slack distribution.

8/16/06
    - Added optional outputs xr, pimul to fmincopf and opf.m to make them
      fully interchangeable with mopf.m.

8/15/06
    - Added branch angle difference constraints to general OPF formulation
      in fmincopf.m (and mopf.m). These limits are specified by non-zero
      values in the ANGMIN and/or ANGMAX columns of the branch matrix.
      If limits are provided in the data, they are enforced by default.
      This can be overridden by setting the 'OPF_IGNORE_ANG_LIM' option
      to 1 using mpoption.
    - Fixed (invisible) bug with multipliers of lower bounded linear
      constraints in fmincopf.m.


Changes since 3.0.0
-------------------

8/1/06
    - Released version 3.1b1.
