@@ -73,7 +73,7 @@ if have_fcn('fmincon')
     
     %% run OPF with active power line limits
     t = [t0 '(P line lim) : '];
-    mpopt1 = mpoption(mpopt, 'OPF_P_LINE_LIM', 1);
+    mpopt1 = mpoption(mpopt, 'OPF_FLOW_LIM', 1);
     [baseMVA, bus, gen, gencost, branch, f, success, et] = runopf(casefile, mpopt1);
     t_ok(success, [t 'success']);
     t_is(f, f_soln, 3, [t 'f']);
